# annotated-types

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
annotated_types/: __init__.py  _compat37.py  _compat38.py  main.py  test_cases.py
requirements/: all.in  all.txt  linting.in  linting.txt  testing.in  testing.txt
tests/: requirements-linting.txt  requirements.txt  test_errors.py  test_grouped_metadata.py  test_main.py
