[tool.poetry]
name = "annotated-types"
# version is set from annotated-types/__init__.py::__version__
version = "0"
description = "Reusable constraint types to use with typing.Annotated"
authors = [
    "Samuel Colvin <s@mulecolvin.com>",
    "Adrian Garcia Badaracco <1755071+adriangb@users.noreply.github.com>",
    "Zac Hatfield-Dodds <zac@zhd.dev>",
]
readme = "README.md"
repository = "https://github.com/annotated-types/annotated-types"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
    "Environment :: MacOS X",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.7.0"
typing-extensions = {version = "^4.0.0", python = "<3.9.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-version-plugin]
source = "init"

[tool.pytest.ini_options]
testpaths = "tests"
filterwarnings = "error"

[tool.coverage.run]
source = ["annotated_types"]
omit = ["annotated_types/_compat37.py", "annotated_types/_compat38.py"]
branch = true

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "raise NotImplemented",
    "if TYPE_CHECKING:",
    "@overload",
]

[tool.black]
color = true
line-length = 120
target-version = ["py310"]
skip-string-normalization = true

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
color_output = true

[tool.mypy]
strict = true
warn_return_any = false
show_error_codes = true
