[project]
name = "annotated-types"
description = "Reusable constraint types to use with typing.Annotated"
authors = [
    {name = "Samuel Colvin", email = "s@muelcolvin.com"},
    {name = "Adrian Garcia Badaracco", email = "1755071+adriangb@users.noreply.github.com"},
    {name = "Zac Hatfield-Dodds", email = "zac@zhd.dev"},
]
readme = "README.md"
repository = "https://github.com/annotated-types/annotated-types"
license-files = { paths = ['LICENSE'] }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: Unix",
    "Operating System :: POSIX :: Linux",
    "Environment :: Console",
    "Environment :: MacOS X",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

requires-python = ">=3.7"
dependencies = ["typing-extensions>=4.0.0; python_version<'3.9'"]
dynamic = ["version"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "annotated_types/__init__.py"

[tool.pytest.ini_options]
testpaths = "tests"
filterwarnings = "error"

[tool.flake8]
max_line_length = 120
max_complexity = 10
ignore = ["E203", "W503"]

[tool.coverage.run]
source = ["annotated_types"]
branch = true

[tool.coverage.report]
precision = 2
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "raise NotImplemented",
    "if TYPE_CHECKING:",
    "@overload",
]

[tool.black]
color = true
line-length = 120
target-version = ["py310"]
skip-string-normalization = true

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
combine_as_imports = true
color_output = true

[tool.mypy]
strict = true
warn_return_any = false
show_error_codes = true
